--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hubblin.github.io/",
+  "homepage": "https://Mahmoudcali02.github.io/PPR-Portfolio",
   "name": "portfolios",
   "version": "0.1.0",
   "private": true,
